ingress-nginx-controller/piyasara-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piyasara-service
  labels:
    name: piyasara-service
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: piyasara-api
