ingress-nginx-controller/piyasara-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: piyasara-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /flights
            backend:
              serviceName: piyasara-service
              servicePort: 8761
          - path: /horas
            backend:
              serviceName: hora-service
              servicePort: 5761
